# ship-hints

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
src/: hints.hpp  main.cpp  randomizerTypes.h  static_data.h  utils.cpp  utils.hpp
src/soh/: hint_list_exclude_dungeon.cpp
src/soh/include/: message_data_textbox_types.h  z64.h
src/soh/soh/Enhancements/custom-message/: CustomMessageManager.cpp  CustomMessageManager.h
src/soh/soh/Enhancements/randomizer/: hint.cpp  hint.h  randomizerTypes.h  static_data.cpp  static_data.h
src/soh/soh/Enhancements/randomizer/3drando/: hints.cpp  hints.hpp  random.cpp  random.hpp
src/soh/soh/Enhancements/randomizer/3drando/hint_list/: hint_list_exclude_overworld.cpp  hint_list_item.cpp
